--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:r+dqvvwD,iv:Sb0xr9IsM+RnYkQDfdpRqqlxiyH78nheqZUP4+vDRVE=,tag:DOSw1zptfU9EZhFHucRoYA==,type:str]
-ansible_user: ENC[AES256_GCM,data:KTFzhWMu,iv:INt4/Y9atuZfxpE6sAe0n2zUwqDDxYPGojYcKJYVK74=,tag:+y4KGcDCeXefZEBaEam+qg==,type:str]
+kind: ENC[AES256_GCM,data:SmFoZUIW,iv:nu7VNAmiLiTBBUB7ZsbckGCASlWCj2+0YWiqLRF2oFE=,tag:sPEfkYGnGgxbxtFf7V5F1g==,type:str]
+ansible_user: ENC[AES256_GCM,data:CxGDcAWt,iv:xl9FETmfnJP1X5YdBKfzzKr8IZnL6tAp6fpT8Ayxu2g=,tag:KhQ3IgZNkrSqs9A/JzgKqA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3cGxmeVRQS3Q0K29RQ29X
-            ZkRFcnVFQVE3d0I0U1h3Sll5UzNXVUhwbEdBCktXUWVGRWtJbXhGLy9GWFpPNzRo
-            azJFQVZuZHNLVXl6bDBBczVQVTlwTU0KLS0tIDBZQU13WTlQamd1Z3hZSlJYdURX
-            clk2RDcxRTlFREVzcmh1a2RXOGFUTjgK1Pznnvj9fJdmbeGEZQaAKmBJar/fyhLa
-            EzvTHEV4Qs89tZBT5+64Ek5Z4kjx7ApLA/dlNgdWkjEdaNB4Unq36Q==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1c0lOeU4yUzEvMGhmbEE5
+            TTNWb09uNU53MlBUNDAxenRlZ3JZZWFJR3dZClgyQm92OHd3Ny9nTFIrMnpYK1Fk
+            TU9DcXRsMlp2N1pYLzNyQmFhdVhjdG8KLS0tIGd3eGpMWForeHBlSGVKaEw0SUNC
+            RU1WZmZtaDhRQnZodThLSWdheVB1clkKYqpTBaWBAjE9ZB4c1mHsrua2RSEO5fNZ
+            1Z5XNoBjyGQ+P17lV0UQNrHrmYLhqomj9SA1KoWPqYr8K+CTKb2Peg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:56:11Z"
-    mac: ENC[AES256_GCM,data:oIY2CW8fWT0b5C+CxqBz7dUUlAXrSGIbUmc7NRfnEr7sU5r3FUYI1+c+zN3ecvyn102RFs+bmPZ6zZd/hHdtoNlYjknRmkoGxJ8lm4VsJ2S9n1NoP86SYYhb0y/cet4/zYrqlrlZitqJFeRZBCdBdaPBqiJ8hbtAODVzDPI2g/U=,iv:JhjU+pQ5LDeC4GjS1z4I2EKfyvLmRI+qn7T7G6tN/44=,tag:mVox7ZoIa44zKxoGqe6TIw==,type:str]
+    lastmodified: "2023-01-08T23:13:11Z"
+    mac: ENC[AES256_GCM,data:e5S3KD4qI271pFC9EQcE4BvdVdKwWrMJyi8YVJJSh2k/X2leHl8im7Nrz9BkZ/JumL+/HY4IYQGWmu0psAOOVnMivsV5Ozcp0fCfTHECI7dtpWvTj9HxO6y7+Y/ey6cySPh4Ie86H4pO4DOEy1TnSW9atp/4rImLbR9D8JtpSCE=,iv:bKpTlRzjUyMdojI4R/im5rRYh7H2V5YX+ZDyEzrWVsA=,tag:k0c3W1ukJYS1XE0SyLzi0w==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
