--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:plAMgW6X,iv:hpktlfIekJdu1synAlGzvnIyzCn3eKA9c/fb+1eR8ec=,tag:zA7mHFCCGmCruRjjxmwMHQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:bsB01oQ0,iv:9qjdt/kv1r3biMHxLFcE8a2lZX5EBeeuOuy0/BlkJGA=,tag:Q+I05XxG0XoFUYCZhCQyLA==,type:str]
+kind: ENC[AES256_GCM,data:EoQh/dtF,iv:pbbKlo1oeid4YJuENWE890HoJkMB6CcE3i0o+XuWC98=,tag:AYewl5S9HlfaIvbXJ5pzNQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:VbTo4Jfx,iv:uBlVvqKob625ZEAEbKOEMd67SO/z8iTQ0NBkVv1xUmc=,tag:6eckGfDegR1HbYBx3/Sitg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3a1lreVJ2SXpOOFdMRzg1
-            Mjl2cmZ2aGZmZ2NvMG9ld1dCWFl6YTBEOUFvCk9NTWdJclhZUFpjT1NWVithQzBP
-            bW9XQUs4NEFZSlVEc2NiY2ZLdGM1UGMKLS0tIFpiWVczUkIweFdUQi9iMTJlNnZ2
-            ZWxpNHg4aTZlUU4xaE9hU1dabnIveU0KyppR6ZJLUsb2qRzAaXwZYvXJ97XL5nSC
-            h0gjq9LyZq3SaM13dbf0C1yKp4Gio/HPdGkQC67M8lQgQgrUCj6ogg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlSG8rb21ic25lZEc1RHFI
+            bDhUV3V1aGJpRitZbUVTRWhkZUZCVTd6YlFBCko3WkhxVzZ3NlR1eW9DZWQzUWRm
+            M3EyMnNvR2FDbTV4L0E2SE9PNTJCU1UKLS0tIFVVazN3b2dnUVFhUzNiZk5ObEJX
+            UzZMOHJ3SjJHbDFkOEMvVnlUOWtOWEEKilpo7mIJi7usJIFVExy/CKRVa+hbr3Yz
+            iLJYbuNQNU7wvUevMrf512Dr5BThPmJbutz4dcEHQMiIfvuMBeUYDg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:56:11Z"
-    mac: ENC[AES256_GCM,data:tnVr7cvqd+QlkpCQ5K8KChrdgb6oMshSJsPql0wzZQ46347IxtMJMzf/5PSgOTbOHjKgd5bRV99tjaFfbzPP47F8pbH9jB07Ox+9n8+Q8ngCV+R5SWCjuTRwRFd9/rB0DkN2nujVyaTEFW25dGCL6HGZg9kDMvwKRzGE3aavzt4=,iv:pJ5muEk1MbY7bi//DnK2/AbwZx5PIyltl/bSqysphlE=,tag:iQ4q8oyPer39raXRqUx5zg==,type:str]
+    lastmodified: "2023-01-08T23:13:11Z"
+    mac: ENC[AES256_GCM,data:JWvSK6MzSdRAiXlrtRgpHPLrsfn8fUEb8Rz0wilet02h8qGqgPoqmij5rMbDkYbXIua1Je5p5/oNUBzQDS0FjpW1Nr+vBkvtn/9ylPKCTWRqqchBM1rvWI8Z/yH6LfvTWXbAOprccRmXrPZP28C7pZqgAlwIYzpRMNXqfNpOjE0=,iv:Rp6aCHtMja/fTYO5e6HZtf/hWh1QXCkXchHbtuJowss=,tag:FbKDCpv2g/g8sfkQpk+kcg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
