--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:MItuHY1K,iv:VrgE6ca8DquhnnfpcSV7xPAp8KJFba9DpZhrvrrqNB4=,tag:saTlbDZPILCSr7dKEFH3Ag==,type:str]
-ansible_user: ENC[AES256_GCM,data:6+IdIPPX,iv:FqwphyjGdEKhOyV3E91WIJ0RGE0+INv99x8dwlEGMTo=,tag:sHO689MseXqgSzyfgUOYnA==,type:str]
+kind: ENC[AES256_GCM,data:ELLpZD/2,iv:HsnPXYjDDdGjaoay4CePXD6tZ7JLOq2E4pSTgmWAkZY=,tag:oc9q1dH2i+dGd28aH92Zog==,type:str]
+ansible_user: ENC[AES256_GCM,data:Rao9sxTj,iv:uStqXd4catX3XbfBU4Y5BcofQUQyaXZKEHqPDA9nvsM=,tag:flFkmYbKPAYphZnN2FzTQA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxWVpEZHdvaFl2WFlyaFVB
-            Z1RRQkhCcm9VTVE2SWxuZzFOeStsSTNPWUhnCjBxYzVkZVByQThXaXdOREdlOUdY
-            WmFBVmpSamtPVXZPQTFrQlZaYmxGTkEKLS0tIG9YV1AvVmxxaUtIZHBmbEpacXBa
-            d05qdzRMUklORVYvUkthbS81eHpxWEUKYFk06vVw2NI72TIEc48qvsgtfcCiAXwQ
-            Mz/YMHHmhU1KhRvVMDgJkLwCwxpL/oaCS+hdtFK4XTNNETIpDwgNGQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXZTJjL2tkQVpWcXNPVW9I
+            dTRwNnhnYjZHOGtFRndhcS9iTG5LOGlHSlJZCnJpeTBLbWg1M21xRmhzSXhoKy9W
+            eTRCQng5alR1R3hoRTlyUGxBZXhVWDgKLS0tIFdXSklsb2xueE82TFhOTzRjdnVv
+            WmhhVWVvQkxSbkdrWW40MmxIOXBYa1EKwWCNTUV1Stu2ksvIOxLhkPbB3bb9hb9q
+            4lu7wHXYtWw2CnuMo25Nj0qx8+mqwlaDYpz1jDH2ae53N+chUUhZeA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:56:11Z"
-    mac: ENC[AES256_GCM,data:J91RhecF0JWk1+oUtPSBdmK+elmA0ExvvJbxjRNxBIl41EcI5jGJgV3Bo55nD68yB4c8xbPGflJ8S+lf2tPzSuP3reWpbXsvfAxrU+zdSXIS2p39sYz4MBsg5p3Na91SvcGBmwdljZxSpJOQAEv3oq56ZbzXyjdJObGJEYVYEvg=,iv:noCFjWl7VCZsb1UFNLejdtomo6UBdlTSFr+uNFtZVEo=,tag:BdwTJAaFKHn3mN8nccc4Lw==,type:str]
+    lastmodified: "2023-01-08T23:13:11Z"
+    mac: ENC[AES256_GCM,data:3E0eyU5851NTD2FFVAuNf7YHGja51Tvqat8wirZC4E1qxgx5dFhLrlgHx0mxjdtm6tydcbDIECeYdj6UFEAepuSnqPGNk1GQL2ZlqSO5Lwrmn7gjbdUa7Ed80pJcp9oZmjn692CSwFJ2+PL0dk4Rx9i7EPt4RiD3DNvLQY/Ndbs=,iv:d/68bNI9SHsjrUn/uR3VOBWGSKF43P39DaNtAXchTeM=,tag:zeDZqf0AeVEj4H+9p3z9sQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
