--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:YDxxsq3m,iv:9/U7aiF7w5a+LoId0gZxQ1oCdrbL72C8TkOUaQps2bc=,tag:XDIReYvtWacnO4MaFkd7mA==,type:str]
-ansible_user: ENC[AES256_GCM,data:3uRleP1G,iv:cq6GURp87h1Y6WKXLN0jdlRbYRnELy7xZHP/jSK2w08=,tag:BjFnli07ogzHmEVg59lnfQ==,type:str]
+kind: ENC[AES256_GCM,data:SIl3yGTY,iv:rsrf2anwdMsIIN7Ys21mf4MFkFIZ1FaHcryt/fqXBZU=,tag:lZkmHqc6K9XpcYkPLfFGgA==,type:str]
+ansible_user: ENC[AES256_GCM,data:teAwQMNQ,iv:zvggt+plPBGcM9JjWGlrzvlsiKpos/uq9gQNFSTDeLM=,tag:VVsg21lEZPvtEfEIZ3jryA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjVVpRT2dwTXRVTlhzbERt
-            UlVSUFYxOXV2VDhFL050M0NzeVVEdnA0MkJZCnNHcjFzM0FXYmFNUjd2cDkvSjZv
-            Njg3QU1tb0hjTlJIU21HanRrMXBlYjAKLS0tIEw4U0tMVjFhTFQ2ZGtINGRRWnRF
-            UG95SWg2UFdmN09MVFMyUVd2Tm1UQlkKCx21C5ex+Vk7OO/HR8g18Z5SYKCl5WEB
-            Z9cy/ULSrbg4woyi9TI30iRWu99OKpluAzosahPztSfW/+2fRMnL0A==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLSFZ6VXN1eFFkUCtEeitt
+            RGxSWm83dTdNeW5qdTBkVmV5U2pUQzdRMjJvCjIrOEV4SU5xYmZCc1ZiMGg3aEFH
+            M2xhbmx4bTE3eit5aXJSNWdLNGlsMjgKLS0tIEUxc2hFVlF4L2oreWQwanFOY2VI
+            T29IMGdyMVJYZUFNVFpRS09UN2J1YVkKBbpxdQP0nwiTLzXj56t+mPH4FLnG0dkO
+            n5zPL+B/qaTTq5CBLUyjqQUIX2MTVI+bOqQ5iFnWSqnf41UxUhF0Eg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:56:11Z"
-    mac: ENC[AES256_GCM,data://n/ueWrYUhC1/W51OxV75sAphj4Oaf1pJMKXB6Y7dFwpivPQ8ohiP5kItoDhC1LpU2UCNmdWuoZ0joDl8LRwfNAjSuMwj2Pq6ASMk6IkPQ/JLKBIMAgfSEF1Q1PFNoE+5VQqhFKybWbYh5LMtawB6sSD9fzcZ97D40r3pYbVkk=,iv:xGuLY1PqgtvQidUUZygxk2j0++HqErVdx4pHXXHEaTU=,tag:pT9gE7fsjIeexALZU988BA==,type:str]
+    lastmodified: "2023-01-08T23:13:11Z"
+    mac: ENC[AES256_GCM,data:pDkWnxEtjRJoK6V88REBMZ5CE/V2MYPIYbX3LWKRMnXyf8+9Tcri/h/Va9Hya0W33Yx7WW+aBQbEm5tDQXAsD3q6JeUSbuIvFkvASNdgXl9DJVF6gzRYqujWfPH/rDXaoUMUAa7W8iVIySXgpxxFPqZfQsLnAAOJGyQ6rn0CAWs=,iv:6o7nxvDFNuvBJaqFItToM2MgHedckLd/zPf7kZ9bQlI=,tag:kmZ7ySRex2Ge5Fg/F+18kg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
