--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:Pm+Saab5,iv:GkTIDk7FbU5Gh9tLWNm7geKSMEWI+Ej3SpThl4Yq70Q=,tag:L7a0HSINbD9/BtfMsqg4MA==,type:str]
-ansible_user: ENC[AES256_GCM,data:R7iZrd8T,iv:ihYjEoIwQpdkhEdYOEpPMtc/c8OSnOhbBTEOOHqb/qk=,tag:+zNnAQRI+rJiXBhLobyHiA==,type:str]
+kind: ENC[AES256_GCM,data:IqDPrnvr,iv:MQh/P1b9uGodUecO2/bobconGz+sFnf2vNnGQ1p6PZM=,tag:VZ8KsicpPWSq11Ydg/eWJQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:3BDJB1a0,iv:0n4s1dlEjxDGrEoJl1RQBPJSw6OS6Iynx2Ch0CIH/7k=,tag:doXJ5fK15MUaC3o3MPyIvg==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLdnpCUkIycHZMd1FVdTlk
-            N1FzSDM0bEFjMjdBOUpVNUN6S0h5UTdjUFY4CkM0NkNyakV4WWt1WXdQUDllRTNl
-            ZHRLckpsc0xLczdITHBjWDdYU3YrT0UKLS0tIHAwdGpTOFRrS0cxUEN5cGNjODUy
-            YjA1WURRZEV3c1cvMEZYVm80aUFyQm8KK5TCK7yGpiOvIlZ4RFCnQlNBiffY3Chx
-            Iak9yXXEsY1ilRTxOlzQ3Jscl/xZ2x4f2W8wNYF+Im13Lvsb8MQL6g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAyYnZaRjdlSHovSDQybGZz
+            Y0FmVHkxb1VQRlBoU1FIRkxZWXg1cCt6YVhVCkgyTXVCcCs2WlV3aEpIdzg1RWhW
+            QkVuaHZhbU9mWkdEbDJnaTVpNUF0VTgKLS0tIDZ2NDNLOTZLTUEvdnRLZ0FlN2JY
+            ZkwvMFJkcWZFRzV1MFA1TXJZSmhEZFUKiA1ukMMrS6hvXzZulsZaQ6XudwOVCbg2
+            sDbplhfyOIjSQcoxwxWEipKeIurpVNcUSQVWAmZsdln/1i+jpR7WZQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:56:11Z"
-    mac: ENC[AES256_GCM,data:cVX7JQ1XQNCApB7Cs5wx2XXkTSwe3qirUwrKrSW2l86e4JNjle0In1khjOPxUQPpNfI4jl06RDjzrWEI3z4gX8MOR8e2khn+0Fx6+cpv3fgLhHLyTstMiiu1JcvXjjQwgjodg/EymEI4B0ikUlCds47DzsDg8/RsyKMj8c0VF/k=,iv:RNnkL/4bLAr/hDav8husODhxH/wFw9mBIAGtkBEksqU=,tag:0SGmCoKUCLtE7JKqM2Spdg==,type:str]
+    lastmodified: "2023-01-08T23:13:11Z"
+    mac: ENC[AES256_GCM,data:U4QfFkT6GUnsOThha8WrvJr0KBnjq0Bng9AQqV+UlUDDkh9twdwt7G2Oq8+MiXD31z4KN6GjO1JHyej39GNqOlTRDZEFGBnKmp/Kw+LXJo7TpcHbjCfhLq+Vb+o9uPUYSrd3U9Px6uAOq/Nmx2cY6gwvhExqfn7mo/cxKD+kveE=,iv:AjeWupV58cT5CuKxfoPgF9s7iRP8ApLkfOHdiIPCreE=,tag:AcTmwV2MvihiaEsEAnAgtQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
