--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:xtN5i+zCrFPuJNZTNJ8YKptPzmOw,iv:JUaSc1e6hC1loCJNGFyesi/bq4OQ6Q+gcJJ7gZk4vL4=,tag:nAbYkJLsKQTy0vxdggE8yA==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:fSALE7oLPMxAv+H9zztPQOj+mRL7KPGkZu+ZZvK0xTyeuhvVBA==,iv:xyCC4AWo6TTG+nWpuUw0Jlp3AwsSs7xR7nG1/+08fY8=,tag:vebIiSjjWL4yDPMSh48n5g==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:9VEW0LVra77Gy4Y=,iv:ttqo5nB69kF2FrlJbeQlBoD4vIYSQKD5SVyBtIZPiCE=,tag:hvUlI3hPiJFDJhivHuzgnw==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:vYWwnELL79rgzsoIY3pBqH+13jAb,iv:JiqMG2t8OHVgGht0EpFJTRa3wBEftGAVR1LLh2iSRZA=,tag:sKtp/PtAYp5Wpux9WXKG2A==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:jDB9gqWQOtbZVHwLj14cBAbmK8XSe9mtSbk+I7ZgX43KB9MLqQ==,iv:iWe4xjzzBXBW1lcQrD7H6zCocEcIxbaUNj5b9bobhRE=,tag:YSUQ1VweTZ08mv75KVOrlQ==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:/+JXEtWa79JaH6A=,iv:rf3daPEEp7FrglfkClljufKISHNlre0KPjD9Bgk/0m0=,tag:6NHwA1XJu5Ps3RLEmR8HqA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAycHUxMU5EK051M2Z1L3ZD
-            OGtyR2czNE1PQ2ZHcFlmNmpad21qYjEzRVUwCkdzS2o0T2cwZlM4eFovV21pL3dH
-            NTh5eEt1UnZIeisxY2xrb2FaRk1NclkKLS0tIGJhbHA2VEIyazZrSjFVekszcXdE
-            UG1NVXd6N21hZi9uNjJISStSWXQ5eDgKJYF6kIpYYE+Nt6mlLUVTAm/bwalca9nm
-            LC8iIBCV/NGV8o95+1szdRTYiUVkxnWX9TAygSJbkQCXfcMad9bnLg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYQVNnaEw2c1piYTFUbU80
+            aStUdHA3QXBwZWdIOG5kRXUvK0VzdmZFNmc4Cm5XdjZsVG9SQmRuNjJBOHpFajJ6
+            WXdzZ3BTRGFIZ05uVHoxVWpQWVJYNmcKLS0tIG41TjdaRnBDZXJRYks0RU9mNzhu
+            aitkaGkrYng0MmJ2My9IQWh2bXBRc3cKbdiBs918XBVloHQFDqYYShMbuHc6b2pC
+            82EuPxRLXADKWPjBzwTgIiZKqQ+LyaKfjVWgVdmmWPwhHd5nZIvdvA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:56:11Z"
-    mac: ENC[AES256_GCM,data:kDOepMX1nJda0aqbcGY7p6K0Y6mAhw7b/JpSi73686gBbPdf0igWBp8vra9Hc2O7ZfCWEu9tln2btzgDgH3GA2DXOjtjldlxX7GlsGWDVBM4EMH0LrDnp0SJGz7iErq6QeTzWWlA107vOCZplf8dTNrnfyF7c/A+VJR3yRx5PfU=,iv:JpqWlkPeRfPnv1KoIq6brH8LoX+Wud4nRGuvarSdHz4=,tag:UnS/TS18ujrhklCII9VE0Q==,type:str]
+    lastmodified: "2023-01-08T23:13:11Z"
+    mac: ENC[AES256_GCM,data:GHdLfjjLp85vomlV+m2erLUhxAQ5cqRCBZI3khlY8NSE19x0edNTCFRa2JQkLQQMfZP6Q1Mt3UzZBrBRlK+narc6+fMHeWRYOCv9QBez2K5N6mkpaihgSsbB2frqQnJwuoErpBukyqMXeQ5oxR3wPJPOhqLn43Y3FoXzS4rKQa0=,iv:OOuSJo/jiGG/TnjhX192korRLEQUuE3XjZwQRliV+e0=,tag:hiHtbq+y8ndMhQArBwNQBg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
