--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,18 +4,25 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:HZxO2UFqHVFzCQk=,iv:fUX9jMPbdjwcrPg0DIrryNegvx77fVwn5JF2SDFf9/Y=,tag:j2EaFPOghFTIvak8gfylNg==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:0V4FD7B9jbVlMEDJhDluz3cczqXF,iv:N2jxPJmf7TUNcc7DcdPwCI9+9rJsHaBpvx/nc4WfVBI=,tag:69YwoBQj1OhCSESboqn0WQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:oL61cjJA7+vYp3FIbDVxzhn4FibaJ1Nm8U7F6mpsGiSyb9Im/csIPeexQUJGHNc453wBri9+t9xqEM3W9qaD825lWajfNhE=,iv:TU/uMj/55nS4qodYmnM5WmQv3QgbPPkytWKtBi0JUz8=,tag:cRr3EVxE4y3gb2cqfdmRIg==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:zUlY8/kFjzruvYD7Sq/Vj0LROKHQ1ZR4QaY+e6vsVOZPx20=,iv:Oy1TTqeWTxGePfLPJSRRhA0hoF7adouJBmIgQaGmgyY=,tag:sXK85yM2WuK/s72Q7AfxUw==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:XPJa8WVRilKtjGBdV2deAFNs+Q==,iv:smtU40NAory6Vhrwgk2NVLieIfTKqR0GPR5vaXipDXs=,tag:ZdeeWJF5dcLeeYirUjsaZA==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:HUWFhc9ovXLGV3eEIe42JYT/jlRA,iv:DXH3cQjUjzO5AEOUmT5ba3/ei8nN1XAbEQFWe+LyqZ8=,tag:CwyN5LbdLsCx4HyZpqKrJQ==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:DxkrvX4zKIo=,iv:Ch8xU7mgtaYhapOaLmLblheYii4IkNiThqQ1EOqVU2w=,tag:YQEwgBOA7qnAcO0MgzefLg==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:Ot/gFPDOeyY=,iv:h5c81f71vHaMo8uf/HhdUz9+oZ9R9MhJ5ZmJxN6v/dE=,tag:zGqC4l4Av/dbuqJQ9LNYmA==,type:str]
-    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:bzvJhANM37Id9I66GvWC1aCFSGbjzQBDmpeZ4XCTLlfW5VJPaWRssgCn/FgO7eAVSD0e2ydlJGH+A+fKkQb+Ew==,iv:9k080ClGIi4myX8XX1XhYwCvoZG3Cpcwmft6lqX6qEg=,tag:hMaSiH5hGtDfgEkhaAzd4A==,type:str]
-    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:/Zq1dilcHq5kZ5n4lmngHu4PUB6n1eNhK87daxjG8Knl+0brccMnp+49UweZD2U9jDP9+vofv/vP/aXguRC6iA==,iv:1HfmHCEhE4OdSTvn2uqJwa9F9Qx7bC6f6vxycLaikj0=,tag:WH/nxHrF2v7NlBiP2y4zHA==,type:str]
-    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:/oFICwdKA/yp,iv:lROC2NBb3orBkT2ufMEE48vhUJCkMRKlaSk1pvKriTI=,tag:3vyZ1rE0gcZtdOjkRUYrOg==,type:str]
-    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:aacrmzk6+dEOwH4MUW0t,iv:9a0F1tD2UnopRm4MymleDrLl7lDtbuplSlnMJJbrJOs=,tag:gSZ9LMQ5y1cI8muP9Sufow==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:Wyc/lvFeV7CfXVQ=,iv:C5DsV2/RN3NlK3OxSm5yXfVgXVpILyUt1UqJ67b95yg=,tag:EoWLaaWWZZit+Of8nXG1Zg==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:DyS9Wxl/hmdM7kdWRBxKle1T4Ppx,iv:uiePuiSeXb0bj+0W9TQTYJcEVUQfjUnOVZbrFfyIf64=,tag:rTZQ84f59wryhpZ3rYQqOg==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:21S6ZV8vTG8WNe595JYEfWXtcJWLpyWYKubauAsyeVjbhuaUan9YDR7DXsz103N83SJyysousokGzU3KPVPLuKOL3NGTiUE=,iv:SOfKFDaL7UnLfsZHc+gveXOf9oBSfRg4eeZybOKcGI0=,tag:dD1Nx8OFVC5yXUn2AI4mEw==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:jlHUE2/5c3tNiQ+s69Ww85q1nrx+S+wZOoTDvndtHmwtZyU=,iv:nfgrv3bz70lnKjAI4y8tCKsZMezm4Yy1PPjM5gietWU=,tag:gywYWdGdVo9Pu3yOgkZmbw==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:76kCiqgDCkf6GS/YNAF8+O153A==,iv:MHXQGFoggUSEkvpYs25ilF1rRK1nL8D2lfn4+kJladU=,tag:pTg/+agIs9dpdFhNb6XEzQ==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:6EZ7rknMVPZTfaloZAiorr/FcBhx,iv:4LMc1jZhyXKK6WQef7gPyGsiO5MYzBKfW5CezdwmzTo=,tag:TpeX5Pks06wHiitf+fX60Q==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:Qg0p5wAYeUc=,iv:DYFrAF0HZU91NIUuVQgOGK3pB7mz6lzPj5un5uosIdU=,tag:gf9X4oSA3ORBIiJRbZYr8Q==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:1KJo4qYSx0A=,iv:DZ9JI3ueyNT4bk2a3YvSNCf4sS8c60ZVrv7qFR2O7bU=,tag:sa7Uy+7qr+yp5b2+D9aRuw==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:1jFn6TKFxAFo7cI0gBJaWOsfK+cv5dXeEO9unHh7aHr7ZS7II/JPQe3+RXYu7wRwFywhdWjy8A83QMPg4WY2Dg==,iv:75fahZc/5nW5I9myTt+JMYAMjSzSV5tLirflsRnACMo=,tag:ZHF71B7/B4WMgUoi/7isFg==,type:str]
+    SECRET_LLDAP_JWT: ENC[AES256_GCM,data:AoHvH3NDz8H5vSG+ax/kVTV1Qb50OAKlNIW6QvksDPpMi+m8t+pB3lWcYyim7Ly13zHXiMZ5BYSUzFLPSZDm+w==,iv:3dwPiLX9dNVObB7R9ltr1EYn9tcEpFCxuUOdGotn4Ds=,tag:wvYnoS+A5D/iiqIusp5FEg==,type:str]
+    SECRET_LLDAP_LDAP_USER_PASS: ENC[AES256_GCM,data:Yi5iWSQVcdzH,iv:QIZc5sGomB2VUuQuuRLWHoy93XWv4Zh+ZVeLXa5cqBQ=,tag:7VkDGDtcs1v4sQfewJ4PVw==,type:str]
+    SECRET_LLDAP_LDAP_BASE_DN: ENC[AES256_GCM,data:zzHl1bnELezky/Z3ziR+,iv:Jw+HJ7XjSC9RlVN7O9XPhLMjNhLMVPXhOCPp0bsLmqQ=,tag:81HD6Ccg/Pn/dXY8cJhT9g==,type:str]
+    SECRET_AUTHENTIK_KEY: ENC[AES256_GCM,data:JDVfVgc/TO/++6usVzNxiEVtd2Fe3IAjKCeYUkeKWDbW7pskLWHmfrYAu0wGTvv8VQI=,iv:5F3Qa5xl4cMe8wNKoKeoY9eoxlx6hqkj7lKRzMyaCnE=,tag:EAyHGZbuSsy17frc/c8LLQ==,type:str]
+    SECRET_AUTHENTIK_SMTP_HOST: ENC[AES256_GCM,data:R9Ob/UuvTDcLQSrCrw8=,iv:AU+r+c892nTXEv5hqUUwFchFHhn+sIynNU3eENLcNx0=,tag:3XpaQrQDahT44XqwiCM85g==,type:str]
+    SECRET_AUTHENTIK_SMTP_USERNAME: ENC[AES256_GCM,data:b/NliqVQMiS/isnJHs//gichNi0=,iv:NAX1M/hzSHuEW4L/pCSO3hXgQOd69XFIBBLc5p3es3s=,tag:40XYAs5Kjm/E8e85lg6QTA==,type:str]
+    SECRET_AUTHENTIK_SMTP_PASSWORD: ENC[AES256_GCM,data:mAM3JBB94As=,iv:+sef+i2mThIVhKquRir5x47viEIhpGiYjwBHkXS40Ew=,tag:Gu4jXgsWVlRpaByTkg5hRw==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_HOST: ENC[AES256_GCM,data:lVZcAAzc7iQW8d+X,iv:U+E+6mDpuHFTid0BtOlC4zdka+eTlFFjK9amxmaRz7s=,tag:XjtleaQ+2GYDoB44Np1C4A==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_USERNAME: ENC[AES256_GCM,data:JbUvrDSPl4Mt,iv:V9juhhFMMmd8O4rZJ8UWywFvU4O/WlEF1wGgiUAqjdc=,tag:JYfGXDqgWziRzpZFHdqVwA==,type:str]
+    SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:k4bZnzLo8fD/,iv:fDbm9ClGBsRnUu6aOZjqAJ6INTbzIEqllY3FEfp6xjs=,tag:5ZZrdLD2cTTiXqrjwLWFsw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,14 +32,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBTREJISVFPKzZFM1lpS3lX
-            L3JMaHdHQ3NGL3hleXhmT1FTQ09TOGVuY2pvCmR6bmhMNXA1c3dJNjI1aFBkWTd2
-            N0RjQjB0NWF6d1doejZObllGYkJhT3cKLS0tIDE4MEtmbGtHUE9lMWhJejVxZkhk
-            Vmp5MWZabFdYdHovNVMxQTFGYUFMbUEKL3Gs8YYBV59cRw6oMvEOkWFBFH8f89Ce
-            JVqqgCQu/Ia0yH/85jAk3RTZquJyhHKAWjjFCctazBJJ/ffTz8xDYQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4alM2YnJ0M3VHT3NPQmxM
+            UlZmNm1uTjl4V0RvZy9nbExuejI2aS91cWpjCkg1bUdzejM3Z1o5eDYxdUtXeUdI
+            VmVZK1FUQkFvR2xpOTVVT25BVWdCTjAKLS0tIEVvVjlnN0t4d3BpSXRZaytXakhT
+            bkF4K2tsbk9rb0ViV2RzQ1lGU0F2bE0KRCfLsQq0nrQJi83U9LF8ZmHAbawotBss
+            mtaGTNqtQwnoEoPp4U3uYUhZdM7cuB7um7ohmAVmzIcbtJVfURv/fw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-08T00:56:11Z"
-    mac: ENC[AES256_GCM,data:yh95Av0v+mTZ7SJYusDbpOZ5u3lqF+qlpHKQ/F+taOIADZ2Tb0E7BoyI7bvX4cBzUR0dZsuQi8bgaz/AR15u7MlEUq9p9ZqsWqRusH1UoRjV8lnsN0LnwNCZzppCoHl/e0gJoq7MzrXD71czc276JoTrmL+k9fVZLc+C6/Cm6bc=,iv:iu67wihxa8kl52eE0/BmzgiByz1FbzF1ae5+CKGreoM=,tag:r2Oq/g7gXtpNBNmIYOYutw==,type:str]
+    lastmodified: "2023-01-08T23:13:11Z"
+    mac: ENC[AES256_GCM,data:hi6TBiaFJwygvLv+q6RBF3bvg77SKhXo9uHhsIKSYUxE8EFra6YzC3/GTtXEhpaaAdCN+oZnXXGbgbUSfBxfdz+Cw032fFcUUgPSTz7DAWIfGCmOgaU2jSC8q22Ks5QYLXaxza7DPYPvJJze0ThJfnrZHfJA9AELyKkiIRmieK8=,iv:jUhruGMjnqjU5AnrWSRGhe5fxCSDvM/Iuer9OR0KAIk=,tag:O8GRs4pwIOXehqLtN7h5aQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
