--- a/tmpl/kubernetes/cluster-secrets.sops.yaml
+++ b/tmpl/kubernetes/cluster-secrets.sops.yaml
@@ -17,3 +17,10 @@ stringData:
   SECRET_LLDAP_JWT: "${BOOTSTRAP_LLDAP_JWT}"
   SECRET_LLDAP_LDAP_USER_PASS: "${BOOTSTRAP_LLDAP_LDAP_USER_PASS}"
   SECRET_LLDAP_LDAP_BASE_DN: "${BOOTSTRAP_LLDAP_LDAP_BASE_DN}"
+  SECRET_AUTHENTIK_KEY: ${BOOTSTRAP_AUTHENTIK_KEY}
+  SECRET_AUTHENTIK_SMTP_HOST: ${BOOTSTRAP_AUTHENTIK_SMTP_HOST}
+  SECRET_AUTHENTIK_SMTP_USERNAME: ${BOOTSTRAP_AUTHENTIK_SMTP_USERNAME}
+  SECRET_AUTHENTIK_SMTP_PASSWORD: ${BOOTSTRAP_AUTHENTIK_SMTP_PASSWORD}
+  SECRET_AUTHENTIK_POSTGRES_HOST: ${BOOTSTRAP_AUTHENTIK_POSTGRES_HOST}
+  SECRET_AUTHENTIK_POSTGRES_USERNAME: ${BOOTSTRAP_AUTHENTIK_POSTGRES_USERNAME}
+  SECRET_AUTHENTIK_POSTGRES_PASSWORD: ${BOOTSTRAP_AUTHENTIK_POSTGRES_PASSWORD}
