--- a/kubernetes/apps/networking/authentik/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authentik/app/helm-release.yaml
@@ -39,27 +39,27 @@ spec:
       tag: 2022.9.0
     nodeSelector:
       worker: yes
-    ingress:
-      enabled: true
-      ingressClassName: nginx
-      annotations:
-        external-dns/is-public: "true"
-        external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-        haproxy-ingress-proxy.pfsense.org/enabled: "true"
-        haproxy-ingress-proxy.pfsense.org/frontend: "https-443"
-        haproxy-ingress-proxy.pfsense.org/backend: "nginx-443"
-        #traefik.ingress.kubernetes.io/router.entrypoints: websecure
-        #traefik.ingress.kubernetes.io/router.middlewares: networking-rfc1918-ips@kubernetescrd
-        cert-manager.io/cluster-issuer: letsencrypt-production
-      hosts:
-        - host: "id.${SECRET_DOMAIN}"
-          paths:
-            - path: /
-              pathType: Prefix
-      tls:
-        - secretName: "${SECRET_DOMAIN//./-}-tls"
-          hosts:
-            - "id.${SECRET_DOMAIN}"
+    # ingress:
+    #   enabled: true
+    #   ingressClassName: nginx
+    #   annotations:
+    #     external-dns/is-public: "true"
+    #     external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+    #     haproxy-ingress-proxy.pfsense.org/enabled: "true"
+    #     haproxy-ingress-proxy.pfsense.org/frontend: "https-443"
+    #     haproxy-ingress-proxy.pfsense.org/backend: "nginx-443"
+    #     traefik.ingress.kubernetes.io/router.entrypoints: websecure
+    #     traefik.ingress.kubernetes.io/router.middlewares: networking-rfc1918-ips@kubernetescrd
+    #     cert-manager.io/cluster-issuer: letsencrypt-production
+    #   hosts:
+    #     - host: "id.${SECRET_DOMAIN}"
+    #       paths:
+    #         - path: /
+    #           pathType: Prefix
+    #   tls:
+    #     - secretName: "${SECRET_DOMAIN//./-}-tls"
+    #       hosts:
+    #         - "id.${SECRET_DOMAIN}"
     authentik:
       email:
         host: "${SECRET_SMTP}"
@@ -79,14 +79,14 @@ spec:
         name: authentik
         user: authentik
         password: ${SECRET_AUTHENTIK_POSTGRES_PASSWORD}
-        s3_backup:
-          access_key: "${SECRET_MINIO_ACCESS_KEY}"
-          secret_key: "${SECRET_MINIO_SECRET_KEY}"
-          bucket: authentik
-          host: https://${SECRET_MINIO_HOST}
-      redis:
-        host: '{{ .Release.Name }}-redis-master'
-        password: ${SECRET_AUTHENTIK_REDIS_PASSWORD}
+      #   s3_backup:
+      #     access_key: "${SECRET_MINIO_ACCESS_KEY}"
+      #     secret_key: "${SECRET_MINIO_SECRET_KEY}"
+      #     bucket: authentik
+      #     host: https://${SECRET_MINIO_HOST}
+      # redis:
+      #   host: '{{ .Release.Name }}-redis-master'
+      #   password: ${SECRET_AUTHENTIK_REDIS_PASSWORD}
     prometheus:
       serviceMonitor:
         create: true
@@ -105,7 +105,7 @@ spec:
       postgresqlPassword: ${SECRET_AUTHENTIK_POSTGRES_PASSWORD}
 
     redis:
-      enabled: true
+      enabled: false
       auth:
         enabled: true
         password: ${SECRET_AUTHENTIK_REDIS_PASSWORD}
