--- a/kubernetes/apps/networking/authentik/app/pvc.yaml
+++ b/kubernetes/apps/networking/authentik/app/pvc.yaml
@@ -1,29 +1,38 @@
 ---
 apiVersion: v1
-kind: PersistentVolumeClaim
+kind: PersistentVolume
 metadata:
-  name: authentik-pgsql-db
-  namespace: auth
+  name: pv-authentik
+  namespace: networking
 spec:
+  storageClassName: ""
+  capacity:
+    storage: 1Mi
   accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
-  storageClassName: ceph-block
-  volumeMode: Filesystem
-
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: 192.168.1.2
+    path: "/volume1/network-storage/authentik"
+    readOnly: false
+  mountOptions:
+    - nfsvers=4.1
+    - hard
+    # - noatime
+    # - nodiratime
+    # - tcp
+    # - intr
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: authentik-redis-db
-  namespace: auth
+  name: pvc-authentik
+  namespace: networking
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
+  volumeName: pv-authentik
+  storageClassName: ""
   resources:
     requests:
-      storage: 1Gi
-  storageClassName: ceph-block
-  volumeMode: Filesystem
+      storage: 1Mi
