--- a/kubernetes/apps/networking/authentik/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authentik/app/helm-release.yaml
@@ -65,19 +65,19 @@ spec:
         host: "${SECRET_SMTP}"
         port: 587
         use_tls: true
-        username: "${SECRET_SMTP_USER}"
-        password: "${SECRET_SMTP_PASSWORD}"
-        from: "Authentik <${SECRET_SMTP_USER}>"
-      secret_key: "${SECRET_AUTHENTIK_SECRET_KEY}"
+        username: "${SECRET_AUTHENTIK_SMTP_USERNAME}"
+        password: "${SECRET_AUTHENTIK_SMTP_PASSWORD}"
+        from: "Authentik <${SECRET_AUTHENTIK_SMTP_USERNAME}>"
+      secret_key: "${SECRET_AUTHENTIK_KEY}"
       log_level: debug
       outposts:
         docker_image_base: ghcr.io/goauthentik/%(type)s:%(version)s
       error_reporting:
         enabled: false
       postgresql:
-        host: '${SECRET_POSTGRES_HOST}' # '{{ .Release.Name }}-postgresql' #
-        name: authentik
-        user: authentik
+        host: '${SECRET_AUTHENTIK_POSTGRES_HOST}' # '{{ .Release.Name }}-postgresql' #
+        name: '${SECRET_AUTHENTIK_POSTGRES_USERNAME}'
+        user: '${SECRET_AUTHENTIK_POSTGRES_USERNAME}'
         password: ${SECRET_AUTHENTIK_POSTGRES_PASSWORD}
       #   s3_backup:
       #     access_key: "${SECRET_MINIO_ACCESS_KEY}"
@@ -87,21 +87,10 @@ spec:
       # redis:
       #   host: '{{ .Release.Name }}-redis-master'
       #   password: ${SECRET_AUTHENTIK_REDIS_PASSWORD}
-    prometheus:
-      serviceMonitor:
-        create: true
-        interval: 30s
-        scrapeTimeout: 3s
-      rules:
-        create: true
     postgresql:
       enabled: false
-      persistence:
-        enabled: false
-        existingClaim: authentik-postgresql
-
-      postgresqlUsername: authentik
-      postgresqlDatabase: authentik
+      postgresqlUsername: ${SECRET_AUTHENTIK_POSTGRES_USERNAME}
+      postgresqlDatabase: ${SECRET_AUTHENTIK_POSTGRES_USERNAME}
       postgresqlPassword: ${SECRET_AUTHENTIK_POSTGRES_PASSWORD}
 
     redis:
